crates/patok-tui/tests/snapshots/ui__header_and_frame_title_show_the_research_agent_of_the_research_stage.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Research | Claude - claude-sonnet-5.5 ──────────────────── 00:00 ┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │Investigation                                                     │
[   Plan   ]│What does the parser do today?                                    │
      ↓     │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
[  Build   ]└──────────────────────────────────────────────────────────────────┘
      ↓     ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
[  Review  ]│✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
