crates/patok-tui/tests/snapshots/ui__idle_dashboard_with_a_complete_queue.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 14)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 3/3 - 0 left ────────────────────────────────────────────┐
            │✔ T1.3  wire the engine to the shell                              │
[ Discover ]│                                                                  │
            │                                                                  │
            │ a add tasks · i inject task · Enter run discovery · ↑↓ scroll    │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                            [ Enter ] run discovery  [ m ] menu
