crates/patok-tui/tests/snapshots/ui__narrow_header_drops_the_run_mode_chip-2.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
         ┌ ┐
[ Researc│n│
      ↓  │ │
[   Plan │ │
      ↓  │ │
[  Build │ │
      ↓  └─┘
[  Review┌ ┐
         └─┘
 STOPPED
