crates/patok-tui/tests/snapshots/ui__narrow_header_drops_the_run_mode_chip.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Bui┐
[ Research ]│no o│
      ↓     │    │
[   Plan   ]│    │
      ↓     │    │
[  Build   ]│    │
      ↓     └────┘
[  Review  ]┌ Tas┐
            └────┘
 STOPPED  sprint
