crates/patok-tui/tests/snapshots/ui__narrow_terminal_wraps_output.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 40, 12)"
---
            ┌ Builder ─────────────────┐
[ Research ]│a rather long line of agen│
      ↓     │t output that must wrap in│
[   Plan   ]│ a narrow pane            │
      ↓     │                          │
[  Build   ]│                          │
      ↓     └──────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────┐
            │○ T1.2  add the parser for│
[ Discover ]│ a add tasks              │
            └──────────────────────────┘
 STOPPED  sprint  Enter  start  m  menu
