crates/patok-tui/tests/snapshots/ui__output_frame_title_shows_provider_and_model.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 14)"
---
            ┌ Builder | Claude - claude-sonnet-5.5 ────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[ Discover ]│○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                    Enter  start build  m  menu
