crates/patok-tui/tests/snapshots/ui__output_frame_title_truncates_when_the_pane_is_narrow-2.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 26, 10)"
---
             ┌ Builder ──┐
[ Research  ]│no output y│
      ↓      │           │
[   Plan    ]│           │
      ↓      │           │
[   Build   ]│           │
      ↓      └───────────┘
[  Review   ]┌ Tasks | 1/┐
             └───────────┘
 STOPPED  sprint
