crates/patok-tui/tests/snapshots/ui__output_frame_title_truncates_when_the_pane_is_narrow.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 40, 12)"
---
            ┌ Builder | Claude ────────┐
[ Research ]│no output yet             │
      ↓     │                          │
[   Plan   ]│                          │
      ↓     │                          │
[  Build   ]│                          │
      ↓     └──────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────┐
            │○ T1.2  add the parser for│
[ Discover ]│ a add tasks              │
            └──────────────────────────┘
 STOPPED  sprint  Enter  start  m  menu
